[package]
name = "tx_chainable_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
tx_chainable = { path = "../tx_chainable" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "migrate"] }
